--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,7 @@
             <div class="border-t border-gray-200">
                 <div class="bg-gray-50 px-4 py-5 w-full flex space-x-0.5">
                     <div class="mt-1 text-sm text-gray-900">
-                        Mexicana, actualmente viviendo en Tlaxcala, soy <b>Engineer</b>
-                        en la UTT, Universiadad que forma programadores de alta calidad
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores tempora praesentium eveniet dignissimos, ex minima ad quidem natus fugit quam sunt aut nobis laboriosam nemo, nihil nostrum! Delectus, non quasi?
                         <div class="mt-6 flex space-x-4">
                             <a href="#" target="_blank">
                                 <svg class="w-6 h-6 cursor-pointer text-gray-400 hover:text-[#FF0000] fill-current"
@@ -85,43 +84,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-fuchsia-200 px-4 py-5 w-full flex justify-between">
-                    <a class="text-sm font-bold text-fuchsia-600 text-center hover:text-fuchsia-800 cursor-pointer"
-                        href="#" target="_blank">
-                        Historia
-                    </a>
-                    <span>💻</span>
-                </div>
-                <div class="bg-yellow-200 px-4 py-5 w-full flex justify-between">
-                    <a class="text-sm font-bold text-yellow-600 text-center hover:text-yellow-800 cursor-pointer"
-                        href="#" target="_blank">
-                        Proyectos
-                    </a>
-                    <span>📖</span>
-                </div>
-                <div class="bg-blue-200 px-4 py-5 w-full flex justify-between">
-                    <a class="text-sm font-bold text-blue-600 text-center hover:text-blue-800 cursor-pointer" href="#"
-                        target="_blank">
-                        PODCAST
-                    </a>
-                    <span>🎙️</span>
-                </div>
-                <div class="bg-lime-200 px-4 py-5 w-full flex justify-between">
-                    <a class="text-sm font-bold text-lime-600 text-center hover:text-lime-800 cursor-pointer" href="#"
-                        target="_blank">
-                        Tecnologías
-                    </a>
-                    <span>🎒</span>
-                </div>
-                <div class="bg-rose-200 px-4 py-5 w-full flex justify-between">
-                    <a class="text-sm font-bold text-rose-600 text-center hover:text-rose-800 cursor-pointer" href="#"
-                        target="_blank">
-                        Pasatiempos
-                    </a>
-                    <span>🚀</span>
-                </div>
+                <main id="links">
+                </main <div class="bg-rose-200 px-4 py-5 w-full flex justify-between">
+                <a class="text-sm font-bold text-rose-600 text-center hover:text-rose-800 cursor-pointer" href="#"
+                    target="_blank">
+                    Pasatiempos
+                </a>
+                <span>🚀</span>
             </div>
         </div>
+    </div>
     </div>
     <div class="flex-block max-w-xl p-4 md:pd-8 mx-auto text-center">
         Copyleft © 2022 🚀 Mariana Sanchez Gonzalez
